K8s/api-server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-server-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: api-server
    template:
        metadata:
            labels:
                app: api-server
        spec:
            containers:
                - name: api-server
                  image: rwoj/api-server
---
apiVersion: v1
kind: Service
metadata:
    name: api-server-srv
spec:
    selector:
        app: api-server
    ports:
        - name: api-server
          protocol: TCP
          port: 3000
          targetPort: 3000
