K8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: promise.dev
      http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service: 
                name: api-server-srv
                port: 
                  number: 3000
          - path: /animal
            pathType: Prefix
            backend:
              service: 
                name: api-server-srv
                port: 
                  number: 3000                  
          - path: /calculator
            pathType: Prefix
            backend:
              service: 
                name: api-server-srv
                port: 
                  number: 3000                  
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service: 
          #       name: pclient-srv
          #       port: 
          #         number: 3000
